@@ -94,6 +94,43 @@ argument_list|,
 literal|"node1"
 argument_list|)
 expr_stmt|;
+name|str
+operator|=
+literal|"/rackA/rackB/node1"
+expr_stmt|;
+name|rackHostname
+operator|=
+name|SLSUtils
+operator|.
+name|getRackHostName
+argument_list|(
+name|str
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|rackHostname
+index|[
+literal|0
+index|]
+argument_list|,
+literal|"rackA/rackB"
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|rackHostname
+index|[
+literal|1
+index|]
+argument_list|,
+literal|"node1"
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
